Add hand controlling mode when controllers are unavailable.

--- a/Assets/SVR/Scripts/SVRSDK.asmdef
+++ b/Assets/SVR/Scripts/SVRSDK.asmdef
@@ -6,7 +6,8 @@
         "GUID:e40ba710768534012815d3193fa296cb",
         "GUID:92f1fac03768b7a26bcb68c0aaea0c70",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:fe685ec1767f73d42b749ea8045bfe43"
+        "GUID:fe685ec1767f73d42b749ea8045bfe43",
+        "GUID:ce522b6ed64c8be4c989a1d26d0e3275"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
