--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,22 +1,25 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "2.2.0",
-    "com.unity.feature.development": "1.0.1",
-    "com.unity.ide.rider": "3.0.27",
-    "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.collab-proxy": "2.7.1",
+    "com.unity.feature.development": "1.0.2",
+    "com.unity.ide.rider": "3.0.35",
+    "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.inputsystem": "1.7.0",
-    "com.unity.polyspatial": "1.1.6",
-    "com.unity.render-pipelines.universal": "14.0.10",
-    "com.unity.test-framework": "1.1.33",
-    "com.unity.timeline": "1.7.6",
-    "com.unity.toolchain.linux-x86_64": "2.0.6",
-    "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.9.1",
-    "com.unity.xr.arfoundation": "5.1.5",
-    "com.unity.xr.hands": "1.4.3",
-    "com.unity.xr.interaction.toolkit": "2.5.3",
-    "com.unity.xr.management": "4.4.0",
+    "com.unity.inputsystem": "1.14.0",
+    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.polyspatial": "2.2.4",
+    "com.unity.render-pipelines.universal": "17.0.4",
+    "com.unity.test-framework": "1.5.1",
+    "com.unity.timeline": "1.8.7",
+    "com.unity.toolchain.linux-x86_64": "2.0.10",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.visualscripting": "1.9.6",
+    "com.unity.xr.arfoundation": "6.0.5",
+    "com.unity.xr.hands": "1.5.0",
+    "com.unity.xr.interaction.toolkit": "3.0.8",
+    "com.unity.xr.management": "4.5.1",
+    "com.unity.xr.visionos": "2.2.4",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
